Finetune models Fixes #19

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "view: 100%|██████████| 6/6 [00:02<00:00,  2.94it/s]\n"
+      "view: 100%|██████████| 6/6 [00:02<00:00,  2.34it/s]\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
     "\n",
     "        # X_train, X_test = X[train_index], X[test_index]\n",
     "        y_train, y_test = y.loc[train_index], y.loc[test_index]\n",
-    "        balanceMetrics = VisDmgLabel(y_train, allTargetParts, view=imgAngle,kfold=kfoldId)\n",
+    "        balanceMetrics = VisDmgLabel(y_test, allTargetParts, view=imgAngle,kfold=kfoldId)\n",
     "        allBalanceMetrics.extend(balanceMetrics)\n",
     "    for kfoldId, (train_index, test_index) in enumerate(\n",
     "        mulitlearnStratify.split(X, y)\n",
@@ -155,7 +155,7 @@
     "\n",
     "        # X_train, X_test = X[train_index], X[test_index]\n",
     "        y_train, y_test = y.loc[train_index], y.loc[test_index]\n",
-    "        balanceMetrics = VisDmgLabel(y_train, allTargetParts, view=imgAngle,kfold=kfoldId)\n",
+    "        balanceMetrics = VisDmgLabel(y_test, allTargetParts, view=imgAngle,kfold=kfoldId)\n",
     "        allMultilearnMetrics.extend(balanceMetrics)\n",
     "kfoldBalanceDf = pd.json_normalize(allBalanceMetrics)\n",
     "kfoldBalanceDf = kfoldBalanceDf[kfoldBalanceDf[\"kfold\"] == 0]\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,49 +180,49 @@
        "data": [
         {
          "text": [
-          0.09388694941692045,
-          0.2125083562356087,
-          0.8364406150189408,
-          0.1361509321845057,
-          0.1791576914506425,
-          0.13637376513407115,
-          0.18272301864369012,
-          0.09425833766619623,
-          0.6324569896477248,
-          0.11774782155358605,
-          0.09235123259104788,
-          0.2354956431071721,
-          0.05861324197512475,
-          0.18135100916064645,
-          0.2800327697922097,
-          0.7622240392477514,
-          0.06901062959934587,
-          0.12068683565004089,
-          0.3702371218315617,
-          0.014227309893704007,
-          0.09370826532126428,
-          0.2122718504229114,
-          0.8361774744027304,
-          0.14334470989761092,
-          0.17947766730968986,
-          0.17962605727852798,
-          0.1822970767176139,
-          0.1203442647277044,
-          0.6321787709497206,
-          0.13951582867783985,
-          0.12804469273743016,
-          0.24536312849162012,
-          0.058770949720670394,
-          0.18115456238361266,
-          0.28059590316573557,
-          0.16051857792034216,
-          0.31756214915797915,
-          0.9191392675755146,
-          0.24806201550387597,
-          0.20489174017642342,
-          0.19032344292969794,
-          0.12550120288692862,
-          0.018978882651697407
+          0.6504493797816238,
+          0.801381564287306,
+          0.9938349550620218,
+          0.7797667681794548,
+          0.28381490009656096,
+          0.43066181386020946,
+          0.24259080442694794,
+          0.12211245636188071,
+          0.3279958292991733,
+          0.0811052357190735,
+          0.04602666269457064,
+          0.09130855738437477,
+          0.07067848365234229,
+          0.24413495196246368,
+          0.1350264392641692,
+          0.45576451349141456,
+          0.09010629599345871,
+          0.2588716271463614,
+          0.24578904333605886,
+          0.03548650858544562,
+          0.6504191705616144,
+          0.8010980043029898,
+          0.9938422731656651,
+          0.7938274352696788,
+          0.2840715186586542,
+          0.47125157652644856,
+          0.2432673046961941,
+          0.13636026411454855,
+          0.3278957169459963,
+          0.08662942271880819,
+          0.10033519553072626,
+          0.09743016759776536,
+          0.07054003724394786,
+          0.24394785847299813,
+          0.13482309124767225,
+          0.6695175731658426,
+          0.8313510624081251,
+          0.9966590939462783,
+          0.764265668849392,
+          0.8281437925965521,
+          0.3191233462515034,
+          0.9158091674462114,
+          0.026459975945476413
          ],
          "type": "bar",
          "x": [
@@ -271,49 +271,49 @@
           "Front View_roof"
          ],
          "y": [
-          0.09388694941692045,
-          0.2125083562356087,
-          0.8364406150189408,
-          0.1361509321845057,
-          0.1791576914506425,
-          0.13637376513407115,
-          0.18272301864369012,
-          0.09425833766619623,
-          0.6324569896477248,
-          0.11774782155358605,
-          0.09235123259104788,
-          0.2354956431071721,
-          0.05861324197512475,
-          0.18135100916064645,
-          0.2800327697922097,
-          0.7622240392477514,
-          0.06901062959934587,
-          0.12068683565004089,
-          0.3702371218315617,
-          0.014227309893704007,
-          0.09370826532126428,
-          0.2122718504229114,
-          0.8361774744027304,
-          0.14334470989761092,
-          0.17947766730968986,
-          0.17962605727852798,
-          0.1822970767176139,
-          0.1203442647277044,
-          0.6321787709497206,
-          0.13951582867783985,
-          0.12804469273743016,
-          0.24536312849162012,
-          0.058770949720670394,
-          0.18115456238361266,
-          0.28059590316573557,
-          0.16051857792034216,
-          0.31756214915797915,
-          0.9191392675755146,
-          0.24806201550387597,
-          0.20489174017642342,
-          0.19032344292969794,
-          0.12550120288692862,
-          0.018978882651697407
+          0.6504493797816238,
+          0.801381564287306,
+          0.9938349550620218,
+          0.7797667681794548,
+          0.28381490009656096,
+          0.43066181386020946,
+          0.24259080442694794,
+          0.12211245636188071,
+          0.3279958292991733,
+          0.0811052357190735,
+          0.04602666269457064,
+          0.09130855738437477,
+          0.07067848365234229,
+          0.24413495196246368,
+          0.1350264392641692,
+          0.45576451349141456,
+          0.09010629599345871,
+          0.2588716271463614,
+          0.24578904333605886,
+          0.03548650858544562,
+          0.6504191705616144,
+          0.8010980043029898,
+          0.9938422731656651,
+          0.7938274352696788,
+          0.2840715186586542,
+          0.47125157652644856,
+          0.2432673046961941,
+          0.13636026411454855,
+          0.3278957169459963,
+          0.08662942271880819,
+          0.10033519553072626,
+          0.09743016759776536,
+          0.07054003724394786,
+          0.24394785847299813,
+          0.13482309124767225,
+          0.6695175731658426,
+          0.8313510624081251,
+          0.9966590939462783,
+          0.764265668849392,
+          0.8281437925965521,
+          0.3191233462515034,
+          0.9158091674462114,
+          0.026459975945476413
          ]
         }
        ],
@@ -328,8 +328,8 @@
           "x0": 0,
           "x1": 1,
           "xref": "x domain",
-          "y0": 0.24659959978622403,
-          "y1": 0.24659959978622403,
+          "y0": 0.39939477926158146,
+          "y1": 0.39939477926158146,
           "yref": "y"
          }
         ],
@@ -1152,7 +1152,7 @@
         "yaxis": {
          "tickmode": "array",
          "tickvals": [
-          "0.25",
+          "0.4",
           0.2,
           0.5,
           0.7
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
           0.5069449602614573,
           0.9151006462155538,
           0.4579217113570527,
-          0.2315234345985293,
+          0.23144915694867416,
           0.2835177894971403,
           0.21265691153531902,
           0.10822253583896606,
@@ -1215,33 +1215,33 @@
           0.21270574216131674,
           0.20749236612795113,
           0.608994276369583,
-          0.07964022894521668,
-          0.18986099754701555,
+          0.0794766966475879,
+          0.18969746524938674,
           0.30793131643499594,
           0.024856909239574815,
-          0.37208784686155216,
-          0.5066775485977147,
-          0.9150467428401841,
-          0.4686155215907405,
-          0.23178513132512243,
-          0.3254933966463867,
-          0.2127912153138448,
-          0.12835732304496217,
+          0.3720602418577046,
+          0.506714147933823,
+          0.9149788559982195,
+          0.4685807552489057,
+          0.2317679353067735,
+          0.32539505898063653,
+          0.2127754284442466,
+          0.12834780028192003,
           0.48,
           0.11307262569832402,
           0.11418994413407821,
           0.17139664804469273,
           0.06465549348230913,
-          0.21258845437616386,
+          0.21251396648044693,
           0.20774674115456238,
-          0.4150741681143926,
-          0.5743685687558466,
-          0.9579045837231057,
-          0.5062140852599225,
-          0.5165040759053855,
-          0.2547106775357477,
-          0.5206467994120005,
-          0.022718161165308032
+          0.41512964448008555,
+          0.574445335471799,
+          0.9580326116011761,
+          0.5062817428495054,
+          0.51657310879444,
+          0.25474472066292436,
+          0.52071638599305,
+          0.0227211975407645
          ],
          "type": "bar",
          "x": [
@@ -1294,7 +1294,7 @@
           0.5069449602614573,
           0.9151006462155538,
           0.4579217113570527,
-          0.2315234345985293,
+          0.23144915694867416,
           0.2835177894971403,
           0.21265691153531902,
           0.10822253583896606,
@@ -1306,33 +1306,33 @@
           0.21270574216131674,
           0.20749236612795113,
           0.608994276369583,
-          0.07964022894521668,
-          0.18986099754701555,
+          0.0794766966475879,
+          0.18969746524938674,
           0.30793131643499594,
           0.024856909239574815,
-          0.37208784686155216,
-          0.5066775485977147,
-          0.9150467428401841,
-          0.4686155215907405,
-          0.23178513132512243,
-          0.3254933966463867,
-          0.2127912153138448,
-          0.12835732304496217,
+          0.3720602418577046,
+          0.506714147933823,
+          0.9149788559982195,
+          0.4685807552489057,
+          0.2317679353067735,
+          0.32539505898063653,
+          0.2127754284442466,
+          0.12834780028192003,
           0.48,
           0.11307262569832402,
           0.11418994413407821,
           0.17139664804469273,
           0.06465549348230913,
-          0.21258845437616386,
+          0.21251396648044693,
           0.20774674115456238,
-          0.4150741681143926,
-          0.5743685687558466,
-          0.9579045837231057,
-          0.5062140852599225,
-          0.5165040759053855,
-          0.2547106775357477,
-          0.5206467994120005,
-          0.022718161165308032
+          0.41512964448008555,
+          0.574445335471799,
+          0.9580326116011761,
+          0.5062817428495054,
+          0.51657310879444,
+          0.25474472066292436,
+          0.52071638599305,
+          0.0227211975407645
          ]
         }
        ],
@@ -1347,8 +1347,8 @@
           "x0": 0,
           "x1": 1,
           "xref": "x domain",
-          "y0": 0.32300084776042925,
-          "y1": 0.32300084776042925,
+          "y0": 0.3229960406723578,
+          "y1": 0.3229960406723578,
           "yref": "y"
          }
         ],
@@ -2206,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2218,49 +2218,49 @@
        "data": [
         {
          "text": [
-          0.3721310257743445,
+          0.3721681645992721,
           0.5069449602614573,
-          0.9151006462155538,
-          0.4579217113570527,
-          0.2315234345985293,
+          0.9151377850404813,
+          0.45795885018198024,
+          0.23148629577360172,
           0.2835177894971403,
           0.21265691153531902,
-          0.10822253583896606,
+          0.10818539701403848,
           0.480226409473449,
           0.09942652863632978,
           0.06918894764280926,
           0.16340210024577345,
           0.06464586281373352,
-          0.21270574216131674,
-          0.20749236612795113,
+          0.21274298056155508,
+          0.20752960452818947,
           0.608994276369583,
-          0.07964022894521668,
-          0.18986099754701555,
-          0.30793131643499594,
+          0.07955846279640229,
+          0.18977923139820113,
+          0.3080130825838103,
           0.024856909239574815,
-          0.37208784686155216,
-          0.5066775485977147,
-          0.9150467428401841,
-          0.4686155215907405,
-          0.23178513132512243,
-          0.3254933966463867,
-          0.2127912153138448,
-          0.12835732304496217,
-          0.48,
+          0.37207404384760917,
+          0.5066958489446155,
+          0.9150127981600327,
+          0.46859813777497494,
+          0.23177653299699522,
+          0.32544422598953887,
+          0.21278332158622992,
+          0.12835256148681234,
+          0.48003724394785846,
           0.11307262569832402,
           0.11418994413407821,
           0.17139664804469273,
           0.06465549348230913,
-          0.21258845437616386,
-          0.20774674115456238,
-          0.4150741681143926,
-          0.5743685687558466,
-          0.9579045837231057,
-          0.5062140852599225,
-          0.5165040759053855,
-          0.2547106775357477,
-          0.5206467994120005,
-          0.022718161165308032
+          0.2125512104283054,
+          0.2077094972067039,
+          0.4150350818576679,
+          0.5744737721349816,
+          0.9579017707985299,
+          0.5061810892081523,
+          0.5165385900434347,
+          0.25472769796191114,
+          0.5206815903775476,
+          0.022719679251587035
          ],
          "type": "bar",
          "x": [
@@ -2309,49 +2309,49 @@
           "Front View_roof"
          ],
          "y": [
-          0.3721310257743445,
+          0.3721681645992721,
           0.5069449602614573,
-          0.9151006462155538,
-          0.4579217113570527,
-          0.2315234345985293,
+          0.9151377850404813,
+          0.45795885018198024,
+          0.23148629577360172,
           0.2835177894971403,
           0.21265691153531902,
-          0.10822253583896606,
+          0.10818539701403848,
           0.480226409473449,
           0.09942652863632978,
           0.06918894764280926,
           0.16340210024577345,
           0.06464586281373352,
-          0.21270574216131674,
-          0.20749236612795113,
+          0.21274298056155508,
+          0.20752960452818947,
           0.608994276369583,
-          0.07964022894521668,
-          0.18986099754701555,
-          0.30793131643499594,
+          0.07955846279640229,
+          0.18977923139820113,
+          0.3080130825838103,
           0.024856909239574815,
-          0.37208784686155216,
-          0.5066775485977147,
-          0.9150467428401841,
-          0.4686155215907405,
-          0.23178513132512243,
-          0.3254933966463867,
-          0.2127912153138448,
-          0.12835732304496217,
-          0.48,
+          0.37207404384760917,
+          0.5066958489446155,
+          0.9150127981600327,
+          0.46859813777497494,
+          0.23177653299699522,
+          0.32544422598953887,
+          0.21278332158622992,
+          0.12835256148681234,
+          0.48003724394785846,
           0.11307262569832402,
           0.11418994413407821,
           0.17139664804469273,
           0.06465549348230913,
-          0.21258845437616386,
-          0.20774674115456238,
-          0.4150741681143926,
-          0.5743685687558466,
-          0.9579045837231057,
-          0.5062140852599225,
-          0.5165040759053855,
-          0.2547106775357477,
-          0.5206467994120005,
-          0.022718161165308032
+          0.2125512104283054,
+          0.2077094972067039,
+          0.4150350818576679,
+          0.5744737721349816,
+          0.9579017707985299,
+          0.5061810892081523,
+          0.5165385900434347,
+          0.25472769796191114,
+          0.5206815903775476,
+          0.022719679251587035
          ]
         }
        ],
@@ -2366,8 +2366,8 @@
           "x0": 0,
           "x1": 1,
           "xref": "x domain",
-          "y0": 0.32300084776042925,
-          "y1": 0.32300084776042925,
+          "y0": 0.32300069664082776,
+          "y1": 0.32300069664082776,
           "yref": "y"
          }
         ],
@@ -3221,6 +3221,28 @@
     "    )\n",
     ")\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10639719.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allCsvFile = glob.glob(\"./data/train_test_labels/**.csv\", recursive=True)\n",
+    "allLabelDf = pd.concat([pd.read_csv(x) for x in allCsvFile])\n",
+    "np.quantile(allLabelDf[\"CaseID\"].unique().tolist(), q=0.7)"
    ]
   }
  ],
