Generate labels for multilabel image classifcation Fixes #28

--- a/src/data_engineering/GetImgsDf.ipynb
+++ b/src/data_engineering/GetImgsDf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vehicleType = \"Saloon - 4 Dr\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +155,14 @@
        "[264673 rows x 2 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bucket3 = \"scope_case\"\n",
-    "myFilter =  lambda x : x[\"Vehicle_Type\"] == \"Saloon - 4 Dr\"\n",
+    "myFilter =  lambda x : x[\"Vehicle_Type\"] == vehicleType\n",
     "targetCols = [\"CaseID\", \"Vehicle_Type\"]\n",
     "caseDf = wr.s3.read_parquet(f\"s3://{bucket3}/\" ,partition_filter=myFilter,dataset=True, columns=targetCols)\n",
     "caseDf"
@@ -161,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "36it [00:36,  1.01s/it]"
+      "36it [00:36,  1.00s/it]"
      ]
     },
     {
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +244,7 @@
        "0.1551688309725586"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1264,7 @@
        "[2997468 rows x 3 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1396,7 @@
        "[201451 rows x 3 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,14 +1408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_466889/3044125367.py:1: SettingWithCopyWarning:\n",
+      "/tmp/ipykernel_498439/3044125367.py:1: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -1433,7 +1442,7 @@
        "Name: filename, Length: 201451, dtype: object"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,14 +1454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_466889/3678596583.py:2: SettingWithCopyWarning:\n",
+      "/tmp/ipykernel_498439/3678596583.py:2: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -1470,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,25 +1494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "write() argument must be str, not bytes",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [86], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m localPath \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(sinkDir, i[\u001b[39m\"\u001b[39m\u001b[39mfilename\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m      9\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(localPath, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m---> 10\u001b[0m     f\u001b[39m.\u001b[39;49mwrite(imgBytes\u001b[39m.\u001b[39;49mcontent)\n",
-      "\u001b[0;31mTypeError\u001b[0m: write() argument must be str, not bytes"
+      "98121it [38:54, 42.03it/s]\n"
      ]
     }
    ],
@@ -1525,10 +1523,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "downloadFileDf.to_parquet(f\"../../data/imgs_metadata/{vehicleType}.parquet\")"
+   ]
   }
  ],
  "metadata": {
